--- a/src/app/features/lms/grp/components/reinsurance/components/reinsurance-selection/reinsurance-selection.component.css
+++ b/src/app/features/lms/grp/components/reinsurance/components/reinsurance-selection/reinsurance-selection.component.css
@@ -210,6 +210,10 @@ p-multiSelect {
     line-height: normal;
 }
 
+.stepper {
+    background-color: #F5F6F8;
+}
+
 @media screen and (max-width: 800px) {
     .container {
       width: 100%;
