--- a/src/app/features/lms/grp/components/reinsurance/components/summary/summary.component.css
+++ b/src/app/features/lms/grp/components/reinsurance/components/summary/summary.component.css
@@ -342,6 +342,10 @@ td:hover .ellipsis-container {
     -ms-overflow-style: none;
 }
 
+.stepper {
+    background-color: #F5F6F8;
+}
+
 @media screen and (max-width: 800px) {
     .container {
       width: 100%;
