--- a/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.html
@@ -1,6 +1,11 @@
 <div class="container">
-    <div class="container">
+    <!-- <div class="container">
         <app-stepper></app-stepper>
+      </div> -->
+      <div class="row stepper">
+        <div class="col-md-12">
+          <app-stepper [currentStep]="2" [stepperData]="steps"></app-stepper>
+        </div>
       </div>
     <div id="container">
         <h5 class="mt-1">Cover details</h5>
