--- a/src/app/features/lms/grp/components/reinsurance/components/summary/summary.component.html
+++ b/src/app/features/lms/grp/components/reinsurance/components/summary/summary.component.html
@@ -1,4 +1,9 @@
 <div class="container">
+    <div class="row stepper">
+        <div class="col-md-12">
+          <app-stepper [currentStep]="2" [stepperData]="steps"></app-stepper>
+        </div>
+      </div>
     <div class="main">
         <div style="text-align: center; padding-bottom: 30px;">
             <span class="reisnurance-summary">Reinsurance summary</span>
