--- a/src/app/features/lms/grp/components/underwriting/components/summary/summary.component.html
+++ b/src/app/features/lms/grp/components/underwriting/components/summary/summary.component.html
@@ -1,4 +1,9 @@
 <div class="main">
+    <div class="row stepper">
+        <div class="col-md-12">
+          <app-stepper [currentStep]="3" [stepperData]="steps"></app-stepper>
+        </div>
+      </div>
     <div class="container">
         <div style="padding-top: 20px; text-align: center;"><span class="summary-text">Policy details</span></div>
         <div class="row col-12 mt-1" style="color: black; padding-left: 25px;">
