--- a/src/app/features/lms/grp/components/underwriting/components/underwriting/underwriting.component.html
+++ b/src/app/features/lms/grp/components/underwriting/components/underwriting/underwriting.component.html
@@ -1,4 +1,9 @@
 <div class="main col-12">
+    <div class="row stepper">
+        <div class="col-md-12">
+          <app-stepper [currentStep]="1" [stepperData]="steps"></app-stepper>
+        </div>
+      </div>
     <div class="container col-12">
         <div style="text-align: center;"><span class="quote-text">Quotation Summary</span></div>
         <div class="row col-12 mt-3" style="color: black;">
