--- a/src/app/shared/components/otp/otp.component.html
+++ b/src/app/shared/components/otp/otp.component.html
@@ -1,4 +1,4 @@
-<app-spinner *ngIf="isLoading"></app-spinner>
+<!-- <app-spinner *ngIf="isLoading"></app-spinner> -->
 <div class="container-fluid">
   <p class="fw-bold text-dark mb-3">{{ 'auth.verification' | translate }}</p>
   <p class="text-muted mb-3">
@@ -19,12 +19,20 @@
         </div>
       </div>
       <div class="row">
+
         <div class="my-3">
           <button [disabled]="!this.otpForm.valid" id="onVerify" type="submit" class="btn btn-primary btn-full-width" size="large" (click)="onVerify()">
-            {{ 'auth.verify' | translate }}
+            <span *ngIf="!isLoading; else loading">{{ 'auth.verify' | translate }}</span>
+            <ng-template #loading>
+              <i class="pi pi-spin pi-spinner text-white" style="font-size: 2rem"></i>
+            </ng-template>
           </button>
         </div>
-        <button class="btn btn-link text-primary fw-bold" (click)="resendOtp()">{{ 'auth.resend_code' | translate }}</button>
+
+        <button class="btn btn-link text-primary fw-bold" (click)="resendOtp()">
+          {{ 'auth.resend_code' | translate }}
+        </button>
+
       </div>
     </form>
   </div>
