--- a/src/assets/css/turnkey-styles.css
+++ b/src/assets/css/turnkey-styles.css
@@ -583,13 +583,19 @@ color: #00529B;
 
 }
 
+.p-datatable .p-datatable-tbody > tr {
+  border-bottom: solid 1px #eee;
+}
 
 .p-datatable .p-datatable-tbody > tr > td {
-  padding: 0.1rem 0.1rem;
+  padding: 0.3rem 0.6rem;
+  font-size: 0.9em;
+  color: gray;
 }
 
 .p-datatable .p-datatable-thead > tr > th {
   padding: 0.6rem 0.6rem;
+  font-size: 0.9em;
 }
 tr > td > p-celleditor > input {
   width: 150px;
@@ -617,7 +623,7 @@ p-celleditor > p-dropdown .p-dropdown {
 }
 
 p-table tr > th {
-  font-size: 12px;
+  font-size: 0.9em;
   width: 10%;
 }
 
