Issues fix from UX review

--- a/src/app/features/crm/components/bank/bank.component.html
+++ b/src/app/features/crm/components/bank/bank.component.html
@@ -91,9 +91,9 @@
       </div>
     </div>
     <div class="card mb-3">
-      <div class="card-header bg-transparent float-start">
+      <div class="card-header bg-transparent float-start pb-0">
         <span class="float-start mt-3">Bank branches</span>
-        <div class="row mt-3 mb-3 float-end">
+        <div class="row mt-3 float-end">
           <div>
               <span class="icon-circle"
               ><i class="fa-solid fa-plus" (click)="openBankBranchModal()"></i
@@ -110,7 +110,7 @@
           </div>
         </div>
       </div>
-      <div class="card-body">
+      <div class="card-body pt-0">
         <div class="row mb-5">
           <div class="col-12">
             <p-table
@@ -165,9 +165,9 @@
     </div>
 
     <div class="card mb-3">
-      <div class="card-header bg-transparent float-start">
+      <div class="card-header bg-transparent float-start pb-0">
         <span class="float-start mt-3">Bank charges</span>
-        <div class="row mt-3 mb-3 float-end">
+        <div class="row mt-3 float-end">
           <div>
               <span class="icon-circle"
               ><i class="fa-solid fa-plus" (click)="openBankChargeModal()"></i
@@ -184,7 +184,7 @@
           </div>
         </div>
       </div>
-      <div class="card-body">
+      <div class="card-body pt-0">
         <div class="row mb-5">
           <div class="col-12">
             <p-table
