--- a/src/app/features/crm/components/payment-modes/payment-modes.component.html
+++ b/src/app/features/crm/components/payment-modes/payment-modes.component.html
@@ -6,9 +6,9 @@
 
   <div class="me-4">
     <div class="card mb-3">
-      <div class="card-header bg-transparent float-start">
+      <div class="card-header bg-transparent float-start pb-0">
         <span class="float-start mt-3">Payment modes</span>
-        <div class="row mt-3 mb-3 float-end">
+        <div class="row mt-3 float-end">
           <div>
               <span class="icon-circle"
               ><i class="fa-solid fa-plus" (click)="openPaymentModesModal()"></i
@@ -25,7 +25,7 @@
           </div>
         </div>
       </div>
-      <div class="card-body">
+      <div class="card-body pt-0">
         <div class="row mb-5">
           <div class="col-12">
             <p-table
@@ -73,9 +73,9 @@
     </div>
 
     <div class="card mb-3">
-      <div class="card-header bg-transparent float-start">
+      <div class="card-header bg-transparent float-start pb-0">
         <span class="float-start mt-3">Claims payment modes</span>
-        <div class="row mt-3 mb-3 float-end">
+        <div class="row mt-3 float-end">
           <div>
               <span class="icon-circle"
               ><i class="fa-solid fa-plus" (click)="openClaimPaymentModesModal()"></i
@@ -92,7 +92,7 @@
           </div>
         </div>
       </div>
-      <div class="card-body">
+      <div class="card-body pt-0">
         <div class="row mb-5">
           <div class="col-12">
             <p-table
