consumed endpoints for reinsurance allocations

--- a/src/app/features/administration/components/tickets/ticket-details/risk-details/risk-details.component.html
+++ b/src/app/features/administration/components/tickets/ticket-details/risk-details/risk-details.component.html
@@ -137,7 +137,7 @@
         <td>{{risk?.limitAmount}}</td>
         <td>{{risk?.premium}}</td>
         <td>{{risk?.rateType}}</td>
-        <td>{{risk?.pilPremiumRate}}</td>
+        <td>{{risk?.pilPremRate}}</td>
         <td>{{risk?.freeLimit}}</td>
         <td>{{risk?.divFactor}}</td>
         <td>{{risk?.multiplierRate}}</td>
