--- a/src/app/features/crm/components/required-documents/required-documents.component.html
+++ b/src/app/features/crm/components/required-documents/required-documents.component.html
@@ -126,7 +126,7 @@
               <div class="col-12">
                 <p-table
                   #assignDocumentTable
-                  [value]="documentsData"
+                  [value]="AssignDocumentData"
                   styleClass="p-datatable-sm"
                   responsiveLayout="scroll"
                   [scrollable]="true"
@@ -144,10 +144,9 @@
                   <ng-template pTemplate="body" let-account>
                     <tr
                       class="custom-table"
-                      (click)="onDocumentsRowSelect(account)"
+                      (click)="onDocumentAssignmentRowSelect(account)"
                       [class.selected]="selectedAssignDocument === account"
                     >
-                      <td class="body">{{ account.organizationName }}</td>
                       <td class="body">
                         {{
                           account.accountType === "A"
@@ -156,11 +155,12 @@
                             ? "Service Provider"
                             : account.accountType === "C"
                             ? "Client"
-                            : account.accountType === "U"
+                            : account.accountType === "S"
                             ? "Staff"
                             : account.accountType
                         }}
                       </td>
+                      <td class="body">{{ account.accountSubType }}</td>
                       <td class="body">
                         {{
                           account.isMandatory === "Y"
@@ -273,51 +273,6 @@
                 </div>
               </div>
             </div>
-            <!-- <div class="col-6 mb-3">
-              <label for="account" class="form-label">Account</label>
-              <input
-                type="text"
-                class="form-control"
-                id="account"
-                placeholder="Account"
-                formControlName="account"
-              />
-            </div>
-            <div class="col-6 mb-3">
-              <label for="type" class="form-label">Type</label>
-              <input
-                type="text"
-                class="form-control"
-                id="type"
-                placeholder="Type"
-                formControlName="type"
-              />
-            </div>
-            <div class="col-6 mb-3">
-              <fieldset>
-                <legend for="default" class="form-label">Mandatory</legend>
-                <div class="form-check form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    id="inlineRadio1"
-                    value="Y"
-                    formControlName="default"
-                  />
-                  <label class="form-check-label" for="inlineRadio1">Yes</label>
-                </div>
-                <div class="form-check form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    id="inlineRadio2"
-                    value="N"
-                    formControlName="default"
-                  />
-                  <label class="form-check-label" for="inlineRadio2">No</label>
-                </div>
-              </fieldset>
-            </div> -->
           </div>
         </form>
       </div>
@@ -358,6 +313,11 @@
                 id="account"
                 formControlName="account"
                 (change)="onAccountChange($event)"
+                [ngClass]="{
+                  'is-invalid':
+                    f['account']?.invalid &&
+                    (f['account']?.dirty || f['account']?.touched)
+                }"
               >
                 <option value="">Select Account</option>
                 <option
@@ -367,6 +327,20 @@
                   {{ account.partyTypeName | uppercase }}
                 </option>
               </select>
+              <div
+                *ngIf="
+                  f['account']?.invalid &&
+                  (f['account']?.dirty || f['account']?.touched)
+                "
+                class="form-text text-danger"
+                [ngClass]="{
+                  'is-invalid': ['submitted'] && f['account']?.errors
+                }"
+              >
+                <div *ngIf="f['account']?.errors['required']">
+                  Account is required
+                </div>
+              </div>
             </div>
             <div class="col-6 mb-3">
               <label for="accountType" class="form-label">Account Type</label>
@@ -428,7 +402,17 @@
 <app-reusable-input
   [modalId]="'documentConfirmationModal'"
   [title]="'Delete Confirmation'"
-  [message]="'Are you sure you want to delete this document?'"
+  [message]="'Are you sure you want to delete this required document?'"
   (confirmed)="confirmDocumentDelete()"
   #documentConfirmationModal
+></app-reusable-input>
+
+<app-reusable-input
+  [modalId]="'documentAssignConfirmationModal'"
+  [title]="'Delete Confirmation'"
+  [message]="
+    'Are you sure you want to delete this Assignment of the required document?'
+  "
+  (confirmed)="confirmDocumentAssignDelete()"
+  #documentAssignConfirmationModal
 ></app-reusable-input>
